--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-oauth/google": "^0.6.0",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.27.2",
+    "discord.js": "^14.13.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^8.7.0",
